--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Resources/layout/MonitoringTimeSettingLayout.xml
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Resources/layout/MonitoringTimeSettingLayout.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/MonitoringRootLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,38 +8,34 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:text="@string/monitoring_title"
+        android:gravity="center_horizontal"
+        android:text="@string/monitoring_setting_title"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"/>
-    <Switch
-        style="@style/Widget.Wear.RoundSwitch"
-        android:id="@+id/MonitoringSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:switchPadding="8dp"
-        android:text="@string/text_enable"/>
 
     <LinearLayout
-        android:id="@+id/IntervalSettingLayout"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="gone"
         android:gravity="center">
 
         <NumberPicker
-            android:id="@+id/IntervalNumberPicker"
+            android:id="@+id/MonitoringIntervalSelector"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:gravity="center_vertical"
-            android:text="@string/text_minute"
-            android:textStyle="bold"/>
+            android:layout_marginLeft="20dp"
+            android:text="@string/text_minute"/>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/MonitoringIntervalApplyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_shape"
+        android:text="@string/text_apply"/>
 
 </LinearLayout>
