--- a/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Resources/layout/HRRecordListLayout.xml
+++ b/src/csharp/RealTimeHR/RealTimeHR/RealTimeHR/Resources/layout/HRRecordListLayout.xml
@@ -35,4 +35,5 @@
     android:id="@+id/HRRecordRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scrollbars="vertical"/>
+    android:scrollbars="vertical"
+    android:nestedScrollingEnabled="true"/>
